@@ -4,7 +4,8 @@ Changelog
 4.3.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Check validity of image2_alignClasses
+  [gotcha]
 
 
 4.3.1.1 (2015-01-05)
